projects/campus-cloud/src/app/containers/controlpanel/dashboard/components/dashboard-campus-tile/dashboard-campus-tile.component.scss
@import '~projects/campus-cloud/src/sass/core/colors';
@import '~projects/campus-cloud/src/sass/core/typography';

@mixin avatar() {
  float: left;
  width: 38px;
  height: 38px;
  margin-top: 5px;
  border-radius: 4px;
  margin-right: 10px;
}

.tile {
  &--title {
    @include font-24px();
    @include font-bold();

    margin-bottom: 30px;
  }
}

.dashboard-table {
  height: 373px;
  max-height: 373px;
  overflow-y: scroll;

  p {
    margin-bottom: 0;

    &.semi-bold {
      @include font-semi-bold();
    }
  }

  &--no-results {
    @include font-16px();
    @include font-semi-bold();

    margin-top: 180px;
  }

  &--header {
    top: 0;
    z-index: 2;
    padding: 16px 0;
    position: sticky;
    background: $color-white;
    box-shadow: -3px 0 2px rgba(0, 0, 0, 0.01);

    p {
      color: $color-secondary-text;
    }
  }

  &--item {
    padding: 10px 0;
    border-top: 1px solid $border-color;

    p {
      top: 12px;
      position: relative;
    }

    p.ranking {
      color: $color-secondary-text;
    }

    div.avatar,
    img.avatar {
      @include avatar();
    }
  }
}

